...
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>

    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
...
    <string name="prefUserHint">(read only)</string>
    <string name="prefLogoutEnabled">Enable logout from homepage</string>
    <string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
    <string name="prefDisableNotifications">Disable notifications</string>
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
    <string name="prefAdvanced_title">Advanced</string>
    <string name="prefDisplay_title">Display</string>
    <string name="prefNotifications_description">System notifications and in-app gamification messages</string>
    <string name="prefSecurity_description">Admin protection of special actions and enabling/disabling certain functionalities from the screen</string>
    <string name="prefAdvanced_description">More advanced/technical settings</string>
    <string name="prefDisplay_description">Control how courses and contents are displayed</string>

...
    <string name="videoplayer_continue">Continue to course</string>
    <string name="options">Options</string>
    <string name="quiz_loading_error">Unexpected error loading quiz. Maybe the format was wrong or out-dated?</string>
    <string name="error_register_username_length">Username must have at least %d characters</string>
    <string name="change_setting_apikey_warning">This will invalidate the API keys for every user cached in the device, so they will need an active internet connection to login again.</string>
    <string name="change_setting_logout_warning">You are currently logged in. If you change this setting your session will finish. Do you confirm?</string>
    <string name="accept">Accept</string>
    <string name="user_not_logged_in">User not logged in</string>

    <string name="notification_courses_to_update_title">New course updates</string>
    <plurals name="notification_courses_to_update_text">
        <item quantity="one">There is %d course ready to update</item>
        <item quantity="few">There are %d courses ready to update</item>
...
    <string name="read_only_answer_unavailable_message">This course is now read-only so access to this %s is no longer available</string>
    <string name="view_your_previous_attempts">View your previous attempts</string>
    <string name="invalid_parameters">Invalid parameters</string>
    <string name="source_dir_does_not_exist">Source directory does not exist</string>
    <string name="source_file_does_not_exist">Source file does not exist</string>
    <string name="dest_dir_does_not_exist">Destination directory does not exist</string>
    <string name="pref_update_activity_on_login">Update activity on login</string>

    <!-- Update activity on login -->
    <string name="none">None</string>
    <string name="optional">Optional</string>
    <string name="force">Force</string>
    <string name="updating_course_activity">Updating course activity: %s</string>
    <string name="error_unable_retrieve_course_activity">Currently unable to retrieve course activity</string>
    <string name="connection_unavailable_couse_activity">Connection unavailable, unable to retrieve course activity</string>
    <string name="try_again">Try again</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="offline_user_not_found">Offline user not found.\nYou have no internet connection so only local users are available.</string>
    <string name="offline_user_invalid_password">Invalid password.\nYou have no internet connection so only local users are available.</string>
    <string name="sdcard_not_available">SD card not available</string>
    <string name="sdcard_not_available_message">To continue using the app the SD card is needed. \nPlease reinsert your SD card.</string>
    <string name="sdcard_not_available_change_settings">SD card is not available. Cannot change to external storage</string>
    <string name="close_app">Close app</string>
...
