<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="TextSize">
        <item name="12">@string/text_size_smallest</item>
        <item name="14">@string/text_size_small</item>
        <item name="16">@string/text_size_normal</item>
        <item name="18">@string/text_size_large</item>
        <item name="20">@string/text_size_largest</item>
    </string-array>
     <string-array name="TextSizeValues">
        <item name="12">12</item>
        <item name="14">14</item>
        <item name="16">16</item>
        <item name="18">18</item>
        <item name="20">20</item>
    </string-array>
    <string-array name="StorageOptions">
        <item name="internal">@string/prefStorageOptionInternal</item>
        <item name="external">@string/prefStorageOptionExternal</item>
    </string-array>
    <string-array name="StorageOptionValues">
        <item name="internal">internal</item>
        <item name="external">external</item>
    </string-array>

    <string-array name="GamificationPointsAnimation">
        <item>@string/prefGamificationPointsViewTypeSimpleAnimation</item>
        <item>@string/prefGamificationPointsViewTypeFullAnimation</item>
        <item>@string/prefGamificationPointsViewTypeFullAnimationSound</item>
    </string-array>

    <string-array name="GamificationPointsAnimationValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Courses not completed REMINDERS -->

    <string-array name="reminder_intervals">
        <item>@string/interval_weekly</item>
        <item>@string/interval_daily</item>
    </string-array>

    <string-array name="reminder_intervals_values">
        <item>@string/interval_weekly_value</item>
        <item>@string/interval_daily_value</item>
    </string-array>

    <string name="interval_weekly_value">WEEKLY</string>
    <string name="interval_daily_value">DAILY</string>

    <string-array name="days_of_week">
        <item>@string/week_day_2</item>
        <item>@string/week_day_3</item>
        <item>@string/week_day_4</item>
        <item>@string/week_day_5</item>
        <item>@string/week_day_6</item>
        <item>@string/week_day_7</item>
        <item>@string/week_day_1</item>
    </string-array>

    <string-array name="days_of_week_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>1</item>
    </string-array>

    <string-array name="days_of_week_values_default">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>



    <!-- Update activity on login options -->

    <string-array name="update_activity_on_login_options">
        <item>@string/none</item>
        <item>@string/optional</item>
        <item>@string/force</item>
    </string-array>

    <string-array name="update_activity_on_login_values">
        <item>@string/update_activity_on_login_value_none</item>
        <item>@string/update_activity_on_login_value_optional</item>
        <item>@string/update_activity_on_login_value_force</item>
    </string-array>

    <string name="update_activity_on_login_value_none">NONE</string>
    <string name="update_activity_on_login_value_optional">OPTIONAL</string>
    <string name="update_activity_on_login_value_force">FORCE</string>

</resources>